Added "Kleines Makefile-Tutorial" - a single release from TeachSWT

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,6 +46,7 @@
        <a href="/index.html">Willkommen</a>
        <a href="/blog.html">Blog</a>
        <a href="/projects.html">Projekte</a>
+       <a href="/articles.html">Texte</a>
        <span class="menu-separator"><span class="menu-separator-text">&#160;--&#160;</span></span>
        <a href="/teachswt.html">TeachSWT</a>
        <!-- <a href="/news.html">Aktuelles</a>  -->
