Removed debugging code from templates, added meta-information generation date

--- a/_includes/2.5column-template.html
+++ b/_includes/2.5column-template.html
@@ -1,18 +1,15 @@
-
 {% comment %}
   (C) Copyright 2004-2013 M E Leypold      
-  This program is free software: you can redistribute it and/or modify
-  it under the terms of the GNU General Public License as published by
-  the Free Software Foundation, either version 3 of the License, or
-  (at your option) any later version.
+  This program or template is free software: you can redistribute it and/or modify it under
+  the terms of the GNU General Public License as published by the Free Software Foundation,
+  either version 3 of the License, or (at your option) any later version.
   
-  This program is distributed in the hope that it will be useful,
-  but WITHOUT ANY WARRANTY; without even the implied warranty of
-  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-  GNU General Public License for more details.
+  This program or template is distributed in the hope that it will be useful, but WITHOUT
+  ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
+  PARTICULAR PURPOSE.  See the GNU General Public License for more details.
   
-  You should have received a copy of the GNU General Public License
-  along with this program.  If not, see <http://www.gnu.org/licenses/>.
+  You should have received a copy of the GNU General Public License along with this program
+  or template.  If not, see <http://www.gnu.org/licenses/>.
 {% endcomment %}
 <?xml version="1.0" encoding="utf-8"?>
 <!-- (C) Content is Copyright M E Leypold. All rights reserved.
@@ -28,7 +25,8 @@
   <head>
     <title> {{ page.title }} @ {{ site.title }}</title>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-      <link rel="stylesheet" type="text/css" href="/site.css" />
+    <meta name="generated" content="<{{ date }}>"/>
+    <link rel="stylesheet" type="text/css" href="/site.css" />
   </head>
   <body id="pagebody" class="body page-background-colors"
         marginwidth="50" 
@@ -78,6 +76,6 @@
          </div>  <!-- page-footer-content -->                     
        </div>  <!-- page-footer -->                     
      
-     </div>  <!-- column-main -->
+     </div>  <!-- column-main -->         
    </body>
 </html>
